--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
 asgiref==3.8.1
 black==24.8.0
+certifi==2024.7.4
+charset-normalizer==3.3.2
 click==8.1.7
 coverage==7.6.1
 Django==5.1
+django-cors-headers==4.4.0
 django-filter==24.3
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+drf-yasg==1.21.7
+idna==3.8
+inflection==0.5.1
 isort==5.13.2
 mypy-extensions==1.0.0
 packaging==24.1
@@ -15,6 +21,12 @@ platformdirs==4.2.2
 psycopg2-binary==2.9.9
 PyJWT==2.9.0
 python-dotenv==1.0.1
+pytz==2024.1
+PyYAML==6.0.2
+requests==2.32.3
 sqlparse==0.5.1
+stripe==10.8.0
 tomli==2.0.1
 typing_extensions==4.12.2
+uritemplate==4.1.1
+urllib3==2.2.2
